Add some more security and fixes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,6 @@
-[ssh_connection]
+[defaults]
+# Workaround for https://github.com/ansible/ansible/issues/13401
 scp_if_ssh=True
+
+[ssh_connection]
+pipelining = True
