--- a/provisioning/roles/base/tasks/main.yml
+++ b/provisioning/roles/base/tasks/main.yml
@@ -4,18 +4,12 @@
 - name: Disable recommended packages
   shell: echo 'APT::Install-Recommends "0";' > /etc/apt/apt.conf.d/00norecommends
 
-- name: Install libc-bin
-  apt: pkg=libc-bin state=latest
-- name: Install curl
-  apt: pkg=curl state=latest
-- name: Install ntp
-  apt: pkg=ntp state=latest
-- name: Install whois
-  apt: pkg=whois state=latest
-- name: Install MySQL
-  apt: pkg=mysql-server state=latest
-- name: Install python-mysqldb
-  apt: pkg=python-mysqldb state=latest
+- name: Install base packages
+  apt:
+    name: "{{ item }}"
+    state: latest
+  loop: ["unzip", "apt-transport-https", "libc-bin", "curl", "ntp", "whois", "mysql-server", "python-mysqldb"]
+
 - name: Enable english locales
   lineinfile: dest=/etc/locale.gen regexp="^#?\s*en_US.UTF-8\s*UTF-8" line="en_US.UTF-8 UTF-8"
 - name: Regenerate locales
