--- a/provisioning/roles/postfix/tasks/main.yml
+++ b/provisioning/roles/postfix/tasks/main.yml
@@ -16,10 +16,10 @@
   shell: "/usr/bin/newaliases"
 - name: "/etc/postfix/main.cf: myhostname=..."
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*myhostname\s*=" line="myhostname = mayurifag.ru"
-- name: "/etc/postfix/main.cf: smtpd_tls_cert_file=/etc/ssl/certs/this-machine.pem"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_cert_file\s*=" line="smtpd_tls_cert_file=/etc/ssl/certs/this-machine.pem"
-- name: "/etc/postfix/main.cf: smtpd_tls_key_file=/etc/ssl/private/this-machine.pem"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_key_file\s*=" line="smtpd_tls_key_file=/etc/ssl/private/this-machine.pem"
+- name: "/etc/postfix/main.cf: smtpd_tls_cert_file=/etc/ssl/ansible/mayurifag.ru.pem"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_cert_file\s*=" line="smtpd_tls_cert_file=/etc/ssl/ansible/mayurifag.ru.pem"
+- name: "/etc/postfix/main.cf: smtpd_tls_key_file=/etc/ssl/ansible/mayurifag.ru.key"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_key_file\s*=" line="smtpd_tls_key_file=/etc/ssl/ansible/mayurifag.ru.key"
 - name: "/etc/postfix/main.cf: smtpd_use_tls=yes"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_use_tls\s*=" line="smtpd_use_tls=yes"
 - name: "/etc/postfix/main.cf: smtpd_tls_auth_only = yes"
