--- a/provisioning/roles/nginx/tasks/main.yml
+++ b/provisioning/roles/nginx/tasks/main.yml
@@ -2,6 +2,8 @@
   apt: pkg=nginx state=latest
 - name: '/etc/nginx/sites-enabled/default: remove'
   file: path=/etc/nginx/sites-enabled/default state=absent
+- name: '/etc/nginx/sites-available/default: remove'
+  file: path=/etc/nginx/sites-available/default state=absent
 - name: 'Install mail vhost'
   template: src=roles/nginx/templates/mail.j2 dest=/etc/nginx/sites-available/mail
 - name: '/etc/nginx/sites-enabled/mail'
@@ -25,3 +27,5 @@
   shell: 'curl -f -o /etc/nginx/conf.d/blacklist.conf https://raw.githubusercontent.com/mariusv/nginx-badbot-blocker/master/blacklist.conf || cp /tmp/blacklist.conf /etc/nginx/conf.d/blacklist.conf'
 - name: 'blockips.conf install'
   shell: 'curl -f -o /etc/nginx/conf.d/blockips.conf https://raw.githubusercontent.com/mariusv/nginx-badbot-blocker/master/blockips.conf || cp /tmp/blockips.conf /etc/nginx/conf.d/blockips.conf'
+- name: restart nginx
+  command: /usr/bin/env nginx -s reload
