Download latest nginx instead of old 1.10 from debian repo

--- a/provisioning/roles/base/tasks/main.yml
+++ b/provisioning/roles/base/tasks/main.yml
@@ -14,3 +14,5 @@
   lineinfile: dest=/etc/locale.gen regexp="^#?\s*en_US.UTF-8\s*UTF-8" line="en_US.UTF-8 UTF-8"
 - name: Regenerate locales
   shell: locale-gen
+
+# TODO: set timezone MSK
