--- a/provisioning/roles/maildb/tasks/main.yml
+++ b/provisioning/roles/maildb/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: "/tmp/maildb.sql"
   template:
     src: "maildb.sql.j2"
@@ -8,21 +7,25 @@
 - name: "Create mailserver database"
   mysql_db:
     name: "{{ maildb.database }}"
+    state: present
 
 - name: "Import mailserver database"
   mysql_db:
     name: "{{ maildb.database }}"
     state: import
     target: /tmp/maildb.sql
+
 - name: Create mailserver MySQL user
   mysql_user:
     name: "{{ maildb.username }}"
     password: "{{ maildb.password }}"
     priv: "{{ maildb.database }}.*:ALL"
+
 - name: "/tmp/maildb.sql: remove"
   file:
     path: /tmp/maildb.sql
     state: absent
+
 - name: "/mail"
   file:
     path: /mail
