--- a/provisioning/roles/nextcloud/tasks/nc_installation.yml
+++ b/provisioning/roles/nextcloud/tasks/nc_installation.yml
@@ -11,17 +11,32 @@
     mode: "u=rwX,g=rX,o-rwx"
     recurse: yes
     state: directory
-    owner: "www-data"
-    group: "www-data"
+    owner: "nginx"
+    group: "nginx"
 
 - block:
+  - name: "[NC] - Setting lighter directory ownership"
+    file:
+      path: "{{ nextcloud_webroot }}/{{ item }}/"
+      recurse: yes
+      owner: "nginx"
+      group: "nginx"
+      mode: "u=rwX,g=rwX,o=rwx"
+      state: directory
+    with_items:
+      - apps
+      - assets
+      - config
+      - themes
+      - updater
+
   - name: "[NC] - removing possibly old or incomplete config.php"
     file:
       path: "{{ nextcloud_webroot }}/config/config.php"
       state: absent
 
   - name: "[NC] - Run occ installation command"
-    become_user: "www-data"
+    become_user: "nginx"
     become: yes
     command: >
         php occ maintenance:install
@@ -37,28 +52,28 @@
       chdir: "{{ nextcloud_webroot }}"
       creates: "{{ nextcloud_webroot }}/config/config.php"
 
-  # - name: "[NC] - Verify config.php - check filesize"
-  #   stat: path="{{ nextcloud_webroot }}/config/config.php"
-  #   register: nc_installation_confsize
-  #   failed_when: nc_installation_confsize.stat.size is undefined or nc_installation_confsize.stat.size <= 100
+  - name: "[NC] - Verify config.php - check filesize"
+    stat: path="{{ nextcloud_webroot }}/config/config.php"
+    register: nc_installation_confsize
+    failed_when: nc_installation_confsize.stat.size is undefined or nc_installation_confsize.stat.size <= 100
 
-  # - name: "[NC] - Verify config.php - php syntax check"
-  #   command: "php -l {{ nextcloud_webroot }}/config/config.php"
-  #   register: nc_installation_confphp
-  #   changed_when: False
-  #   failed_when:
-  #     - nc_installation_confphp.rc is defined
-  #     - nc_installation_confphp.rc != 0
+  - name: "[NC] - Verify config.php - php syntax check"
+    command: "php -l {{ nextcloud_webroot }}/config/config.php"
+    register: nc_installation_confphp
+    changed_when: False
+    failed_when:
+      - nc_installation_confphp.rc is defined
+      - nc_installation_confphp.rc != 0
 
-  # rescue:
-  #   - name: "[NC] - removing config.php when occ fail"
-  #     file:
-  #       path: "{{ nextcloud_webroot }}/config/config.php"
-  #       state: absent
-  #     failed_when: True
+  rescue:
+    - name: "[NC] - removing config.php when occ fail"
+      file:
+        path: "{{ nextcloud_webroot }}/config/config.php"
+        state: absent
+      failed_when: True
 
 - name: "[NC] - Set Trusted Domains"
-  become_user: "www-data"
+  become_user: "nginx"
   become: yes
   command: php occ config:system:set trusted_domains {{ item.0 }} --value="{{ item.1 | ipwrap }}"
   args:
@@ -67,7 +82,7 @@
   changed_when: true
 
 - name: "[NC] - Set Nextcloud settings in config.php"
-  become_user: "www-data"
+  become_user: "nginx"
   become: yes
   command: php occ config:system:set {{ item.name }} --value="{{ item.value }}"
   args:
@@ -77,7 +92,7 @@
   changed_when: true
 
 - name: "[NC] - Set Redis Server"
-  become_user: "www-data"
+  become_user: "nginx"
   become: yes
   command: php occ config:system:set {{ item.name }} --value="{{ item.value }}"
   args:
@@ -89,12 +104,12 @@
   cron:
     name: "Nextcloud Cronjob"
     minute: "*/15"
-    user: "www-data"
+    user: "nginx"
     job: "php {{ nextcloud_webroot }}/cron.php"
     cron_file: "nextcloud"
 
 - name: "[NC] - Set Cron method to Crontab"
-  become_user: "www-data"
+  become_user: "nginx"
   become: yes
   command: php occ background:cron
   args:
@@ -114,17 +129,3 @@
   command: find {{ nextcloud_data_dir }} -type f -exec chmod -c 0640 {} \;
   register: nc_installation_chmod_result
   changed_when: "nc_installation_chmod_result.stdout != \"\""
-
-- name: "[NC] - Setting stronger directory ownership"
-  file:
-    path: "{{ nextcloud_webroot }}/{{ item }}/"
-    recurse: yes
-    owner: "www-data"
-    group: "www-data"
-    state: directory
-  with_items:
-    - apps
-    - assets
-    - config
-    - themes
-    - updater
