--- a/provisioning/roles/php/handlers/main.yml
+++ b/provisioning/roles/php/handlers/main.yml
@@ -9,7 +9,7 @@
     name: php{{ php_ver }}-fpm
     state: started
 
-- name: reload php-fpm
+- name: restart php-fpm
   service:
     name: php{{ php_ver }}-fpm
-    state: reloaded
+    state: restarted
