Add netdata monitoring roles

--- a/provisioning/roles/nextcloud/tasks/main.yml
+++ b/provisioning/roles/nextcloud/tasks/main.yml
@@ -1,4 +1,4 @@
-# TODO: fix permission issues -> www-data to nginx user i guess :S
+# TODO: fix trusted domains
 - name: Check Nextcloud installed
   stat: "path={{ nextcloud_webroot }}/index.php"
   register: nc_nextcloud_installed
