--- a/provisioning/roles/letsencrypt/vars/main.yml
+++ b/provisioning/roles/letsencrypt/vars/main.yml
@@ -7,4 +7,5 @@ acme_sh_default_install_cert_reloadcmd: "sudo systemctl reload nginx"
 acme_sh_default_staging: True
 acme_sh_domains:
   - domains: ["mayurifag.ru", "*.mayurifag.ru"]
+# TODO: production 120
 dns_sleep: 10
