--- a/provisioning/roles/dovecot/tasks/main.yml
+++ b/provisioning/roles/dovecot/tasks/main.yml
@@ -40,7 +40,7 @@
 - name: "/etc/dovecot/conf.d/10-ssl.conf"
   lineinfile: dest=/etc/dovecot/conf.d/10-ssl.conf regexp="^#?\s*ssl\s*=" line="ssl = required"
 - name: "/etc/dovecot/conf.d/10-ssl.conf"
-  lineinfile: dest=/etc/dovecot/conf.d/10-ssl.conf regexp="^#?\s*ssl_protocols\s*=" line="ssl_protocols = !SSLv2 !SSLv3"
+  lineinfile: dest=/etc/dovecot/conf.d/10-ssl.conf regexp="^#?\s*ssl_protocols\s*=" line="ssl_protocols = !SSLv3"
 - name: "/etc/dovecot/conf.d/10-ssl.conf"
   lineinfile: dest=/etc/dovecot/conf.d/10-ssl.conf regexp="^#?\s*ssl_cipher_list\s*=" line="ssl_cipher_list = AES128+EECDH:AES128+EDH"
 - name: "/etc/dovecot/conf.d/10-ssl.conf"
