--- a/provisioning/roles/postfix/tasks/main.yml
+++ b/provisioning/roles/postfix/tasks/main.yml
@@ -31,14 +31,14 @@
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_loglevel\s*=" line="smtp_tls_loglevel = 2"
 - name: "/etc/postfix/main.cf: smtpd_tls_received_header = yes"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_received_header\s*=" line="smtpd_tls_received_header = yes"
-- name: "/etc/postfix/main.cf: smtp_tls_mandatory_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_mandatory_protocols\s*=" line="smtp_tls_mandatory_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-- name: "/etc/postfix/main.cf: smtp_tls_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_protocols\s*=" line="smtp_tls_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-- name: "/etc/postfix/main.cf: smtpd_tls_mandatory_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_mandatory_protocols\s*=" line="smtpd_tls_mandatory_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-- name: "/etc/postfix/main.cf: smtpd_tls_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
-  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_protocols\s*=" line="smtpd_tls_protocols = !SSLv2,!SSLv3,!TLSv1,!TLSv1.1"
+- name: "/etc/postfix/main.cf: smtp_tls_mandatory_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_mandatory_protocols\s*=" line="smtp_tls_mandatory_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+- name: "/etc/postfix/main.cf: smtp_tls_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_tls_protocols\s*=" line="smtp_tls_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+- name: "/etc/postfix/main.cf: smtpd_tls_mandatory_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_mandatory_protocols\s*=" line="smtpd_tls_mandatory_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+- name: "/etc/postfix/main.cf: smtpd_tls_protocols = !SSLv3,!TLSv1,!TLSv1.1"
+  lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_protocols\s*=" line="smtpd_tls_protocols = !SSLv3,!TLSv1,!TLSv1.1"
 - name: "/etc/postfix/main.cf: smtpd_tls_mandatory_ciphers = medium"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtpd_tls_mandatory_ciphers\s*=" line="smtpd_tls_mandatory_ciphers = medium"
 - name: "/etc/postfix/main.cf: smtpd_sasl_type = dovecot"
@@ -103,7 +103,7 @@
     dest: /etc/postfix/main.cf
     regexp: '^milter_protocol'
     line: 'milter_protocol = 6'
-  
+
 - name: "/etc/postfix/main.cf: smtp_sasl_auth_enable = yes"
   lineinfile: dest=/etc/postfix/main.cf regexp="^#?\s*smtp_sasl_auth_enable\s=" line="smtp_sasl_auth_enable = yes"
   when: postfix.relay_host
