Make Ansible working on my cheap vps without any interactions on remote

--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -1,7 +1,15 @@
 ---
 - hosts: all
   become: yes
+  gather_facts: no
+  pre_tasks:
+  - name: 'Install python to make ansible working on clean system'
+    raw: 'DEBIAN_FRONTEND=noninteractive apt-get install -y python python-apt'
+
+- hosts: all
+  become: yes
   become_method: sudo
+  gather_facts: yes
   roles:
     - base
     - sysctl-tweaks
