--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,7 @@
 # Workaround for https://github.com/ansible/ansible/issues/13401
 scp_if_ssh=True
 
+host_key_checking = False
+
 [ssh_connection]
 pipelining = True
